test/expected/using_f-name_v.out
using U = void (*F)(int)
                ^
17: error: "using" type can not have a name
